--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,6 @@ nocapture=1
 cover-package=repoze.debug
 with-coverage=1
 cover-erase=1
+
+[aliases]
+dev = develop easy_install repoze.debug[testing]
