--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,12 @@
 [tox]
 envlist = 
-    py24,py25,py26,py27,pypy,cover
+    py26,py27,pypy,cover
 
 [testenv]
 commands = 
     python setup.py test -q
 deps =
     WebOb
-    Paste
-    virtualenv
-    setuptools-git
-
-[testenv:py24]
-deps =
-    WebOb<1.1dev
-    Paste
-    virtualenv
-    setuptools-git
-
-[testenv:py25]
-deps =
-    WebOb<1.1dev
     Paste
     virtualenv
     setuptools-git
