--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = 
-    py26,py27,pypy,cover
+    py26,py27,py32,py33,pypy,coverage
 
 [testenv]
 commands = 
@@ -9,7 +9,7 @@ deps =
     WebOb
     setuptools-git
 
-[testenv:cover]
+[testenv:coverage]
 basepython =
     python2.6
 commands = 
