--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = 
-    py26,py27,py32,py33,pypy,coverage
+    py26,py27,py32,py33,pypy,coverage,docs
 
 [testenv]
 commands = 
@@ -24,3 +24,11 @@ deps =
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
 # combination of versions of coverage and nosexcover that i can find.
+
+[testenv:docs]
+basepython =
+    python2.6
+commands = 
+    python setup.py docs
+    sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
+    sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
