Add support for Python 3.4, PyPy3.

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,16 @@
 [tox]
 envlist = 
-    py26,py27,py32,py33,pypy,coverage,docs
+    py26,py27,pypy,py32,py33,py34,pypy3,coverage,docs
 
 [testenv]
 commands = 
-    python setup.py test -q
+    python setup.py -q test -q
 deps =
     WebOb
-    setuptools-git
 
 [testenv:coverage]
 basepython =
-    python2.6
+    python2.7
 commands = 
     nosetests --with-xunit --with-xcoverage
 deps =
@@ -19,7 +18,6 @@ deps =
     nose
     coverage
     nosexcover
-    setuptools-git
 
 # we separate coverage into its own testenv because a) "last run wins" wrt
 # cobertura jenkins reporting and b) pypy and jython can't handle any
@@ -27,8 +25,9 @@ deps =
 
 [testenv:docs]
 basepython =
-    python2.6
+    python2.7
 commands = 
-    python setup.py docs
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
     sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest
+deps =
+    Sphinx
