--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = 
-    py27,pypy,py33,py34,pypy3,coverage,docs
+    py27,pypy,py33,py34,py35,pypy3,coverage,docs
 
 [testenv]
 commands = 
